Config fixes Dependencies cleanup and Update { - CitizensAPI - XConomy API - Vault API - Towny API }