@@ -6,16 +6,19 @@ import economy.pcconomy.backend.economy.license.objects.LicenseType;
 
 import org.bukkit.Material;
 import org.bukkit.entity.Player;
+import org.j1sk1ss.menuframework.common.LocalizationManager;
 import org.j1sk1ss.menuframework.objects.MenuSizes;
+import org.j1sk1ss.menuframework.objects.MenuWindow;
 import org.j1sk1ss.menuframework.objects.interactive.components.Button;
 import org.j1sk1ss.menuframework.objects.interactive.components.Panel;
 
 import java.util.Arrays;
+import java.util.List;
 
 
 public class LicensorWindow {
-    public static final org.j1sk1ss.menuframework.objects.interactive.components.Panel Panel = new Panel(Arrays.asList(
-        new Button(0, 19, "Лицензия на создание торговой зоны", LicenseManager.marketLicensePrice + Cash.currencySigh,
+    public static final MenuWindow LicenseWindow = new MenuWindow(List.of(new Panel(Arrays.asList(
+        new Button(0, 19, "Лицензия на создание торговой зоны",LicenseManager.marketLicensePrice + Cash.currencySigh,
             (event) -> LicenseManager.giveLicenseToPlayer((Player)event.getWhoClicked(),
                     LicenseType.Market, LicenseManager.marketLicensePrice), Material.GOLD_INGOT, 7000),
 
@@ -30,9 +33,9 @@ public class LicensorWindow {
         new Button(7, 26, "Лицензия на доступ к кредитной истории", LicenseManager.loanHistoryLicensePrice + Cash.currencySigh,
             (event) -> LicenseManager.giveLicenseToPlayer((Player)event.getWhoClicked(),
                     LicenseType.LoanHistory, LicenseManager.loanHistoryLicensePrice), Material.GOLD_INGOT, 7000)
-    ), "Мир-Лицензии", MenuSizes.ThreeLines, "\u10D1");
+    ), "Мир-Лицензии", MenuSizes.ThreeLines, "\u10D1")));
 
     public static void generateWindow(Player player) {
-        Panel.getView(player);
+        LicenseWindow.getPanel("Мир-Лицензии", "RU").getView(player);
     }
 }
